# Quarry

./: .gitignore  .gitmodules  Cargo.toml  README.md  deployment.local  deployment.local.example  run.py
SharesPool/: SharesPool.json  SharesPool.sol  build.js  package-lock.json  package.json  solc-config.json
SharesPool/HardPools/: package-lock.json  package.json
SharesPool/btcapi/: mortar.ts  sandbox.js  sandbox.ts
SharesPool/sharespool_foundry/: .gitignore  testDeploy.sh
bridge/: Cargo.toml  index.py
bridge/src/: btc.rs  main.rs  peg_in.rs  peg_out.rs
bridge/tests/: peg_in_unit.rs
chain-tip-oracle/: Cargo.toml
chain-tip-oracle/src/: main.rs  quicknode_funcs.rs
contracts/: foundry.toml  package-lock.json  package.json  remappings.txt  revertHelper.py  setupForge.sh  testDeploy.sh
contracts/rewardContracts/: .gitignore
contracts/src/: Pool.sol  PoolShares.sol  QBTC.sol  QSAT.sol  QSATBridge.sol  Share.sol
contracts/test/: Pool.t.sol  PoolShares.t.sol  QBTC.t.sol  QSAT.t.sol  QSATBridge.t.sol  Share.t.sol  SharesPool.t.sol  getTestBlocks.py
frost/: Cargo.toml  output.txt
frost/src/: generate_frost_key.rs  generate_polynomials.rs
oracle/: Cargo.toml  build.rs  oldstuff.txt  scriptSolver.py  test.py
oracle/src/: main.rs  peg_in.rs  peg_out.rs  quicknode_funcs.rs
oracle/src/bindings/: mod.rs  shares_pool.rs
oracleService/: oracle.ts  package-lock.json  package.json  serverConnect.js
peg-in-oracle/: Cargo.toml
peg-in-oracle/src/: main.rs  peg_in.rs
peg-out-oracle/: Cargo.toml
peg-out-oracle/src/: main.rs  peg_out.rs
quarry-scripts/: Cargo.toml
quarry-scripts/src/: deploy_contracts.rs  main.rs
quarry-sdk/: Cargo.toml
rewardContracts/: testDeploy.sh
scripts/: rewardContracts.json  run.py  testScript.sh
(+36 files in other folders)
