[package]
name = "frost_keygen"
version = "0.1.0"
edition = "2021"

[dependencies]
schnorr_fun = "0.9.2"
rand = "0.8.5"
rand_chacha = "0.3"
sha2 = "0.10"
hex = "0.4.2"
k256 = "0.13.3"
secp256kfun = "0.9.1"
rsa = "0.9.6"
nonce = "0.1.0"
secp256k1 = "0.28.1"
bech32 = "0.9.1"
arrayref = "0.3.7"

[[bin]]
name = "generate_polynomials"
path = "src/generate_polynomials.rs"

[[bin]]
name = "generate_frost_key"
path = "src/generate_frost_key.rs"