[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.14"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
web3 = "0.19.0"
