[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.14"
quarry-sdk = { path = "../quarry-sdk" }
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
eyre = "0.6.12"
base58 = "0.2.0"
regex = "1.10.3"
bitcoin = "0.31.1"
