[package]
name = "quarry-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.14"
tokio = {version = "1.36.0", features = ["full"]}
quarry-sdk = { path = "../quarry-sdk" }
eyre = "0.6.12"